--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 
             if(sub1==0 || sub2==0 || sub3==0 || sub4==0 || sub5==0 || sub6==0) 
             {
-              document.getElementById("result").innerHTML="Grade Points Average(GPA) : is only for non arrears";
+              document.getElementById("result").innerHTML="Grade Points Average(GPA) : --";
             }
             else{
               var sub_credit=sub1+sub2+sub3+sub4+sub5+sub6;
