--- a/index.html
+++ b/index.html
@@ -570,6 +570,10 @@
                 document.getElementById("result").innerHTML="Grade Points Average(GPA) : "+cgpa+ "*";
             
             }
+             else if(sub6==0)
+            {
+                document.getElementById("result").innerHTML="Grade Points Average(GPA) : --";
+            }
             else
             {
               var sub_credit=sub1+sub2+sub3+sub4+sub5+sub6;
