--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <img src="calci.jpg" width="110%"/>
       </div>
       <div class=" col-xs-15 col-md-7 align-center">
-        <h4 class="pr-4 pl-2 text-center">Enter your Marks and Credits here..</h4>
+        <h4 class="pr-4 pl-2 text-center">Enter your Grade and Credits here..</h4>
         <form class="pl-5 mt-4" onsubmit="return false">
           <div class="row">
             <div class="col">
